--- a/Learners_Academy-main (1)/Learners_Academy-main/src/main/webapp/admin-teachers.html
+++ b/Learners_Academy-main (1)/Learners_Academy-main/src/main/webapp/admin-teachers.html
@@ -18,11 +18,11 @@
 	<span style="color:white">Teacher: </span> 
 	<select class="tb" name="teacher">
 	<option value="1">Aishwarya</option>
-	<option value="2">Reena</option>
-	<option value="3">Siddhant</option>
-	<option value="4">Lata</option>
-	<option value="5">Umesh</option>
-	<option value="6">Mamta</option>
+	<option value="2">Regina</option>
+	<option value="3">Sridhar</option>
+	<option value="4">Sowmya</option>
+	<option value="5">Uma</option>
+	<option value="6">Mohan</option>
 	</select></div>
 	
 	<div class="item" >
